Traffic/header-based-routing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp
  http:
  # If header 'version = v2-only'
  - match:
    - headers:
        version: 
          exact: v2-only
    route:
    - destination:
        host: myapp
        subset: v2 # ... route to v2
  # Else...      
  - route:
    - destination:
        host: myapp
        subset: v1
